# bevy-colony-sim-game

./: .gitignore  Cargo.toml  DEPENDENCIES.md  LICENSE-MIT  README.md
.obsidian/: appearance.json  workspace.json
assets/: ASSETS.md
assets/sprites/: SPRITES.md  sprite_sheets.json  sprites_template.json
assets/sprites/game/: README.md
notes/: future_features.md
notes/GOAP/: GDC GOAP Ten Years of AI Programming.md  Goal Oriented Action Planning.md
src/: camera.rs  colors.rs  main.rs  state.rs
src/assets/: mod.rs
src/assets/sprites/: mod.rs  resources.rs
src/game/: brain.rs  camera.rs  constants.rs  grid.rs  mod.rs  starfield.rs  state.rs  utils.rs  wall.rs
src/game/ui/: components.rs  fonts.rs  interactions.rs  layout.rs  mod.rs
